--- a/src/main/webapp/cadastroProduto.html
+++ b/src/main/webapp/cadastroProduto.html
@@ -7,17 +7,16 @@
         <link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css">
         <link  href="resources/css/style_cadastro.css" rel="stylesheet" type="text/css">
         <script src="resources/js/jquery.js" type="text/javascript"></script>
-        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>    
+        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resources/js/script.js" type="text/javascript"></script>    
         <meta name="viewport" content="width=device-width, minimum=scale= 1.0, initial=scale=1, user-scalable=yes"/>
     </head>
     <body>
         <header>
-            <div class="container">
-                <div class="row">
-                    <div class="titCadastro">
+            <div class="navbar">
+                <div class="titCadastro">
                         <h3>BoaCompra.com</h3>
                     </div>
-                </div>
             </div>
         </header>
 
@@ -64,8 +63,8 @@
             </div>
         </div>
         <footer>
-             <div class="container-fluid footer">
-                <p>Developed by PriscilaG e FernandaM &copy; 2016</p>
+             <div class="navbar navbar-fixed-bottom footer">
+                <p class="navbar-text">Developed by PriscilaG e FernandaM &copy; 2016</p>
             </div>
         </footer> 
     </body>
