--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>BoaCompra.com</title>
+        <link rel="shortcut icon" href="resources/img/carrinho.png" >
         <link  href="resources/css/style_cadastro.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css">
         <link  href="resources/css/style_cadastro.css" rel="stylesheet" type="text/css">
