--- a/src/main/webapp/cadastro.html
+++ b/src/main/webapp/cadastro.html
@@ -42,26 +42,50 @@
                             <label for="email">E-mail</label>
                             <input type="email" class="form-control" id="email" name="email" placeholder="nome@exemplo.com" required>
                         </div>
-
-                        <br>
-
                         <div class="form-group">
                             <label for="senha">Senha</label>
                             <input type="password" class="form-control" id="senha" name="senha" placeholder="Defina sua senha" required>
-                        </div>
+                        </div><br>
+                        <fieldset>
+                            <legend>Endereço para entrega</legend>
+                            <div class="form-group">
+                                <div class="col-md-10">
+                                    <label for="rua">Rua</label>
+                                    <input type="text" name="rua" class="form-control input-sm" id="rua" required>
+                                </div>
+                                <div class="col-md-2">
+                                    <label for="inputNumero">Número</label>
+                                    <input type="text" name="numero" class="form-control input-sm" id="inputNumero" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-10">
+                                    <label for="bairro">Bairro</label>
+                                    <input type="text" name="bairro" class="form-control input-sm" id="bairro" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-7">
+                                    <label for="cidade" >Cidade</label>
+                                    <input type="text" name="cidade" class="form-control input-sm" id="cidade" required>
+                                </div>
+                                <div class="col-md-5">
+                                    <label for="estado">Estado</label>
+                                    <input type="text" name="estado" class="form-control input-sm" id="estado" required>
+                                </div><br>
 
-                        <button type="submit" class="btn btn-default pull-right ">
-                            Cadastrar
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </div>
+                                <button type="submit" class="btn btn-default pull-right btnCadastro2">
+                                    Cadastrar
+                                </button>
+                                </form>
+                            </div>
+                            </div>
+                            </div>
 
-        <footer>
-            <div class="navbar navbar-fixed-bottom footer">
-                <p class="navbar-text">Developed by PriscilaG e FernandaM &copy; 2016</p>
-            </div>
-        </footer> 
-    </body>
-</html>
+                            <footer>
+                                <div class="navbar navbar-fixed-bottom footer">
+                                    <p class="navbar-text">Developed by PriscilaG e FernandaM &copy; 2016</p>
+                                </div>
+                            </footer> 
+                            </body>
+                            </html>
